--- a/week4/HW3-collaborative.tex
+++ b/week4/HW3-collaborative.tex
@@ -4,7 +4,11 @@
 \usepackage{enumitem}
 
 \title{HW3 Collaborative}
-\author{CS40 Fall '21}
+\author{CS40 Fall'21\\\\\\
+Benjamin Cruttenden (4672440)\\\
+Bharat Kathi (5938444)\\\
+Sean Oh (4824231)\\\
+Marco Wong (4589198)}
 \date{Due: Thursday, Oct 21, 2021 at 10:00PM on Gradescope}
 \begin{document}
 \maketitle
