--- a/week5/HW4-Collaborative.tex
+++ b/week5/HW4-Collaborative.tex
@@ -133,7 +133,7 @@ $$\forall x \in \mathbb{Z}^{\neq 0}~ \forall y \in \mathbb{Z}^{\neq 0} ~(~F(x,y)
     Towards a proof by universal generalization, choose arbitrary non-zero integers x and y. \\
     To show: $(F(x,y) \rightarrow F(x, x+y))$. \\
     Towards a direct proof, assume F(x,y) true, so we need to show $F(x, x+y) \equiv \exists c \in Z (x + y = c * x)$ true.\\
-    By definition, we can express $F(x,y) as \exists k \in Z (y = k * x)$\\
+    By definition, we can express $F(x,y)$ as $\exists k \in Z (y = k * x)$\\
     We choose integer k = c - 1 and plug in: \\
     $y = (c-1) * x$ \\
     $y = c * x - x$ \\
